[package]
name = "iplookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0.79"
# dns-lookup = "2.0.4"
# reqwest = { version = "0.11.24", features = ["json", "blocking"] }
# serde = { version = "1.0.196", features = ["derive"]}
# serde_json = "1.0.113"
# tokio = { version = "1.36.0", features = ["full"] }
# headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
# lazy_static = "1.4.0"
# clap = { version = "4.0.32", features = ["derive"]}
